# CodeSure

./: README.md  signature.html
.cph/: .Discrepancies_in_the_Voters_List.cpp_cc02c4d187dd78908c19cf0f29b7aa03.prob
Data/: security.txt
DeepBeliefNetwork/: DBNLSTM.ipynb  ResearchOverNiftyDaily.ipynb  last10years.ipynb  main.py
HistoricalData/: NSECashScripts.csv  jupy.ipynb  keys.conf  main.py  notebook.ipynb
Learn/: CollectNiftyData.ipynb  CreateUserInterface.ipynb  CreateUserInterface.spec  GeneticAlgorithm.ipynb  GeneticAlgorithm1.ipynb  sample.py  stockfundamentals.csv
LongShortTermMemory/: LSTMonOHLC10.ipynb  LSTMonOHLCEquityStocks.ipynb  LSTMonYahooAxisBank.ipynb  Untitled.ipynb  axisbankPredictions.csv  export.csv
NP/: 0809AUTOTRD.txt  jupy.ipynb  root.py  samplefile.txt  test.py
PredictionModels/: BankNiftyClassificationMain.py  EquityStocks.ipynb  Index.ipynb  LSTMonAxisBankWithPercentChange.ipynb  LSTMonOHLC10.ipynb  LSTMonOHLC25.ipynb  LSTMonYahooData.ipynb  OHLC10.ipynb  Stocks.ipynb  (+7 more)
spreadSheetApp/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cell.hpp  cmake_install.cmake  main.cpp  math_funcs.hpp  operators.hpp  spreadsheet  spreadsheet.hpp
spreadSheetApp/streamulus/: composed_func.h  cpp14_utils.h  engine.h  funcs.h  grammer.h  graph.h  input_stream.h  operators.h  reference.h  sliding_window_func.h  sliding_window_library.h  stream.h  stream_base.h  streamify.h  streamulus.h  strop.h  strop_base.h  strop_data_source.h  strop_func.h  strop_return_type.h  strop_sliding_window.h  strop_stream_producer.h  subscription.h  transform.h
(+74 files in other folders)
